@startuml

title Domain Model Excerpt

hide methods
left to right direction

skinparam classAttributeIconSize 0

skinparam class {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #D8F5FF
    ArrowColor DodgerBlue
    BorderColor DodgerBlue
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #D8F5FF
    ArrowColor DodgerBlue
    BorderColor DodgerBlue
}

package "User Aggregate" {
    entity User <<entity>><<root>>
}

package BoardAggregate {
    entity SharedBoard <<entity>><<root>>
    card BoardTitle <<Value Object>>{
    }
    card BoardNRow <<Value Object>>{
    }
    card BoardNCol <<Value Object>>{
    }
    card BoardState <<Value Object>>{
    }
    card EntryTitle <<Value Object>>{
    }
    card EntryNumber <<Value Object>>{
    }

    BoardTitle <-- SharedBoard
    BoardNRow <-- SharedBoard
    BoardNCol <-- SharedBoard
    BoardState <-- SharedBoard

    entity BoardEntry <<Entity>>{
    }
    card BoardRow <<Value Object>>{
    }
    card BoardCol <<Value Object>>{
    }

    BoardEntry <-- SharedBoard
    BoardRow <-- BoardEntry
    BoardCol <-- BoardEntry
    EntryNumber <-- BoardEntry
    EntryTitle <-- BoardEntry


    entity BoardPermissions <<Entity>>
    card AccessLevel <<Value Object>>{
    }

    BoardPermissions <-- SharedBoard
    BoardPermissions --> User
    BoardPermissions --> AccessLevel

    class BoardCreateConfig <<Util>>

    note left of BoardCreateConfig
        This will be extracted from a config file,
        the default value is
        20 rows and 10 columns
    end note

    card BoardMaxRow <<Value Object>>{
    }
    card BoardMaxCol <<Value Object>>{
    }

    BoardCreateConfig --> BoardMaxRow
    BoardCreateConfig --> BoardMaxCol
}

@enduml